# comfort

./: .bandit.yaml  .commands.py  .dockerignore  .editorconfig  .env.example  .eslintignore  .eslintrc  .eslintrc.yaml  .eslintrc.yml  .gitignore  .ignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CHANGES.md  Dockerfile.backend  Dockerfile.frontend  MANIFEST.in  Makefile  README.md  ROADMAP.md  TODO.md  compose.yaml  docker-bake.hcl  package.json  poetry.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/actions/backup/: action.yml
.github/scripts/: backup.sh  deploy.sh  generate-env.sh  smoke-test.sh
.github/workflows/: backup.yml  build_safari_ext.yml  deployment.yml  docker.yml  pre-commit-autoupdate.yml  release.yml  test.yml  test_authorization_server.yml  test_browser_ext.yml  tests.yml
accounting/accounting/: general_ledger.py
accounting/accounting/doctype/child_item/: child_item.js  child_item.json  child_item.py  test_child_item.py
accounting/accounting/doctype/company/: company.py
accounting/accounting/doctype/customer/: customer.js  customer.json  customer.py  test_customer.py
accounting/accounting/doctype/defaults/: defaults.js  defaults.json  defaults.py  test_defaults.py
accounting/accounting/doctype/gl_entry/: gl_entry.json
accounting/accounting/doctype/item/: item.js  item.py  (+1 more)
accounting/www/products/: index.py
authorization_server/: Dockerfile  docker-compose.yml  main.py  requirements.txt  test-requirements.txt  test_main.py
browser_ext/: comfort_browser_ext.py  install.sh  main.js  setup.py  test_browser_ext_client.py
browser_ext/chrome/: index.css  index.html  index.js  manifest.json
browser_ext/comfort.workflow/Contents/: Info.plist  document.wflow
chrome_ext/: index.html  index.js
cli/: comfort_cli.py  setup.py
comfort/: __init__.py  accounts.md  app.py  commands.py  hooks.py  install.py  modules.txt  patch.py  queries.py  syncify.py  utils.py
comfort/comfort/: general_ledger.py  ledger.py  queries.py  stock.py
comfort/comfort_core/: __init__.py  hooks.py  ikea.py
comfort/comfort_core/hooks/: metadata.py  queries.py
comfort/comfort_core/ikea/: cart_utils.py  item.py  utils.py
comfort/entities/: __init__.py
comfort/finance/: README.md  __init__.py  accounts.md  chart_of_accounts.py  utils.py
comfort/fixtures/: block_module.json  custom_docperm.json  list_view_settings.json  module_profile.json  property_setter.json  role.json
comfort/fixtures/hooks/: __init__.py  boot.py  install.py  metadata.py  overrides.py  queries.py
comfort/ikea/: item.py  utils.py
comfort/integrations/: browser_ext.py  ikea.py  ikea_authorization_server.py  kvartiroteka.py  sentry.py  vk_api.py  vk_form.py
comfort/integrations/tracking/: __init__.py  russian_post.py  vozovoz.py
comfort/public/: build.json
comfort/public/css/: index.scss
comfort/public/js/: index.js  listviews.js  returns.js  sentry.js  web.js
comfort/stock/: README.md  __init__.py  utils.py
comfort/transactions/: __init__.py  return_.py  utils.py
comfort/translations/: __init__.py  ru.csv
comfort/www/: driver.html  driver.py
comfort/www/cart/: index.html  index.js  index.py
comfort/www/products/: index.js  index.py  item_row.html
docker/: Dockerfile.nginx  Dockerfile.worker  backend.Dockerfile  docker-compose.yml  env-example  nginx.Dockerfile  worker.Dockerfile
docker/scripts/: backup.sh  build-socketio.sh  check-health.sh  check_connection.py  deploy.sh  doctor.py  generate-env.sh  smoke-test.sh  worker-entrypoint.sh
scripts/: compare_ikea_purchases.py  migrate_to_new_account_system.py  prepare_chrome_ext.sh  push_translations.py  transfer_orders_from_erpnext.py
tests/: conftest.py  test_init.py  test_item.py  test_metadata.py  test_pymethods.py  test_queries.py
tests/comfort_core/: test_commission_settings.py  test_hooks.py  test_ikea.py  test_ikea_settings.py  test_init.py  test_telegram_settings.py
tests/entities/: test_customer.py  test_item.py  test_item_category.py
tests/finance/: test_account.py  test_chart_of_accounts.py  test_compensation.py  test_finance.py  test_general_ledger.py  test_gl_entry.py  test_init.py  test_money_transfer.py  test_payment.py  test_profit_and_loss_statement.py
tests/integrations/: test_browser_ext_server.py  test_ikea.py  test_ikea_authorization_server.py  test_kvartiroteka.py  test_sentry.py  test_vk_api.py  test_vk_form.py
tests/stock/: test_bin.py  test_checkout.py  test_delivery_trip.py  test_init.py  test_receipt.py  test_stock_balance.py  test_utils.py  test_waiting_list.py
tests/transactions/: test_init.py  test_purchase_order.py  test_purchase_return.py  test_return.py  test_sales_order.py  test_sales_order_list.py  test_sales_return.py
typings/comfort/ikea/: utils.pyi
typings/frappe/: app.pyi  boot.pyi  cache_manager.pyi  hooks.pyi  middlewares.pyi  migrate.pyi  monitor.pyi  parallel_test_runner.pyi  permissions.pyi  rate_limiter.pyi  realtime.pyi  share.pyi  test_runner.pyi  translate.pyi
typings/frappe/commands/: scheduler.pyi  site.pyi
typings/frappe/contacts/: address_and_contact.pyi
typings/frappe/core/: __init__.pyi  utils.pyi
typings/frappe/database/: database.pyi  db_manager.pyi
typings/frappe/desk/: desk_page.pyi  notifications.pyi  search.pyi
typings/frappe/email/: receive.pyi  utils.pyi
typings/frappe/integrations/: oauth2.pyi
typings/frappe/model/: __init__.pyi  create_new.pyi  db_query.pyi  document.pyi  dynamic_links.pyi  sync.pyi
typings/frappe/tests/: __init__.pyi
typings/frappe/utils/: __init__.pyi  boilerplate.pyi  change_log.pyi  commands.pyi  connections.pyi  csvutils.pyi  dateutils.pyi  global_search.pyi  html_utils.pyi  image.pyi  jinja.pyi  minify.pyi  password_strength.pyi  pdf.pyi  safe_exec.pyi  scheduler.pyi  user.pyi
typings/frappe/website/: redirect.pyi  utils.pyi
typings/ikea_api/: api.pyi
typings/ikea_api_extender/: item.pyi  utils.pyi
typings/ikea_api_parser/: __init__.pyi  profile.pyi  utils.pyi
typings/ikea_api_parser/item/: __init__.pyi  item_iows.pyi
(+313 files in other folders)
