[tool.black]
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-format
target-version = ["py39"]

[tool.isort]
profile = "black"
known_first_party = "frappe"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
ignore = ["../frappe"]
typeCheckingMode = "strict"

# To debug, uncomment this lines:
# useLibraryCodeForTypes = false
# enableTypeIgnoreComments = false
# reportUnusedCallResult = true

# Disable those mostly because frappe is untyped:
reportGeneralTypeIssues = false
reportMissingTypeStubs = false
reportPrivateUsage = false
reportUnknownVariableType = false
reportUnknownMemberType = false


# Rules that are not in "strict" mode:
reportUninitializedInstanceVariable = "warning"
reportCallInDefaultInitializer = "warning"
reportImplicitStringConcatenation = "warning"

# strictListInference
# strictDictionaryInference
# strictParameterNoneValue
# reportPropertyTypeMismatch
# reportFunctionMemberAccess
# reportMissingImports
# reportMissingModuleSource
# reportImportCycles
# reportUnusedImport
# reportUnusedClass
# reportUnusedFunction
# reportUnusedVariable
# reportDuplicateImport
# reportWildcardImportFromLibrary
# reportOptionalSubscript
# reportOptionalMemberAccess
# reportOptionalCall
# reportOptionalIterable
# reportOptionalContextManager
# reportOptionalOperand
# reportOverlappingOverload
# reportTypedDictNotRequiredAccess
# reportUntypedFunctionDecorator
# reportUntypedClassDecorator
# reportUntypedBaseClass
# reportUntypedNamedTuple
# reportConstantRedefinition
# reportIncompatibleMethodOverride
# reportIncompatibleVariableOverride
# reportInvalidStringEscapeSequence
# reportUnknownParameterType
# reportUnknownArgumentType
# reportUnknownLambdaType
# reportMissingTypeArgument
# reportInvalidTypeVarUse
# reportUnnecessaryIsInstance
# reportUnnecessaryCast
# reportUnnecessaryComparison
# reportAssertAlwaysTrue
# reportSelfClsParameterName
# reportUndefinedVariable
# reportUnboundVariable
# reportInvalidStubStatement
# reportIncompleteStub
# reportUnsupportedDunderAll
# reportUnusedCoroutine


[tool.semantic_release]
branch = "main"
version_variable = "comfort/__init__.py:__version__"
build_command = "pip install build && python -m build"
commit_subject = "сhore: Update version to {version}"
upload_to_pypi = false

[tool.pytest.ini_options]
filterwarnings = "ignore:bleach-whitelist has been renamed bleach-allowlist|the imp module is deprecated in favour of importlib:DeprecationWarning"
cache_dir = "tests/.cache"

[tool.coverage.run]
source = ["comfort"]
omit = [
  "comfort/fixtures/hooks/boot.py",
  "comfort/fixtures/hooks/overrides.py",
  "comfort/fixtures/hooks/queries.py",
  "comfort/entities/doctype/customer/customer_dashboard.py",
  "comfort/entities/doctype/customer_group/customer_group.py"

]
data_file = "tests/.cache/.coverage"

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "def __repr__",
    "if __name__ == .__main__.:",
    "= TypeVar"
]

[build-system]
requires = ["setuptools", "wheel"]
