[tool.black]
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-format
target-version = ["py39"]

[tool.isort]
profile = "black"
known_first_party = "frappe"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
ignore = ["../frappe"]
typeCheckingMode = "strict"

# To debug, uncomment this lines:
# useLibraryCodeForTypes = false
# enableTypeIgnoreComments = false
# reportUnusedCallResult = true

# Disable those mostly because frappe is untyped:
reportMissingTypeStubs = false
reportPrivateUsage = false
reportUnknownMemberType = false
reportImportCycles = false

# Rules that are not in "strict" mode:
reportUninitializedInstanceVariable = "warning"
reportCallInDefaultInitializer = "warning"
reportImplicitStringConcatenation = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"


[tool.semantic_release]
branch = "main"
version_variable = "setup.py:__version__"
build_command = "pip install build && python -m build"
commit_subject = "сhore: Update version to {version}"
changelog_sections = "feature, fix, build, refactor, test, ci, chore"
upload_to_pypi = false

[tool.pytest.ini_options]
addopts = []
filterwarnings = [
  "ignore:bleach-whitelist has been renamed bleach-allowlist",
  "ignore:the imp module is deprecated in favour of importlib:DeprecationWarning"
]
cache_dir = "tests/.cache"
testpaths = ["tests", "browser_ext"]

[tool.coverage.run]
source = ["comfort"]
omit = [
  "comfort/commands.py",
  "comfort/fixtures/hooks/boot.py",
  "comfort/fixtures/hooks/overrides.py",
  "comfort/fixtures/hooks/queries.py",
  "*_dashboard.py",

]
data_file = "tests/.cache/.coverage"

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "def __repr__",
    "if __name__ == .__main__.:",
    "= TypeVar",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["setuptools", "wheel"]
