[metadata]
name = comfort
version = attr: comfort.__version__
description = Lite-weight ERPNext alternative for specific business
author = Lev Vereshchagin
author_email = mail@vrslev.com

[options]
packages = find:
install_requires =
    erpnext-telegram-integration@git+https://github.com/vrslev/erpnext_telegram.git
    ikea-api-wrapped@git+https://github.com/vrslev/ikea-api-wrapped.git@v0.3.5
    vk-api==11.9.4
include_package_data = True
zip_safe = False

[options.extras_require]
dev =
    black==21.7b0
    pytest==6.2.4
    pytest-cov==2.12.1
    pytest-randomly==3.8.0
    pytest-sugar==0.9.4
