[metadata]
name = comfort
version = attr: comfort.__version__
description = Lite-weight ERPNext alternative for specific business
author = Lev Vereshchagin
author_email = mail@vrslev.com

[options]
packages = find:
include_package_data = True
zip_safe = False

[options.extras_require]
dev =
    black==21.8b0
    pre_commit==2.15.0
    pytest==6.2.5
    pytest-cov==2.12.1
    pytest-randomly==3.10.1
